Fixed build errors locally
