# docs/api-documentation.yml
@@ -316,165 +316,6 @@ paths:
                     message: "Unable to decrypt data"
       security:
         - APIToken: []
-  /facts/dog:
-    get:
-      operationId: "GetDogFact"
-      description: |-
-        Gets a random dog fact.
-        Returns the fact if successful, otherwise returns an error.
-
-        Permissions Required: `Facts::Dog`
-      summary: "Get Dog Fact"
-      responses:
-        200:
-          description: "The dog fact"
-          content:
-            plain/text:
-              schema:
-                type: string
-              examples:
-                fact:
-                  value: "Dogs have a sense of time. It's been proven that they know the difference between a hour and five. If conditioned to, they can predict future events, such as regular walk times."
-        401:
-          description: "Invalid/Missing API Token"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Token:
-                  summary: "Missing API Token"
-                  value:
-                    code: 3
-                    message: "No API key provided"
-                Invalid-Token:
-                  summary: "Invalid API Token"
-                  value:
-                    code: 4
-                    message: "Invalid API key provided"
-        403:
-          description: "Missing Permissions"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Permissions:
-                  value:
-                    code: 1
-                    message: "You are not authorized to access this resource"
-                Blacklisted:
-                  value:
-                    code: 2
-                    message: "You are blacklisted from accessing this resource"
-      security:
-        - APIToken: []
-  /facts/cat:
-    get:
-      operationId: "GetCatFact"
-      description: |-
-        Gets a random cat fact.
-        Returns the fact if successful, otherwise returns an error.
-
-        Permissions Required: `Facts::Cat`
-      summary: "Get Cat Fact"
-      responses:
-        200:
-          description: "The cat fact"
-          content:
-            plain/text:
-              schema:
-                type: string
-              examples:
-                fact:
-                  value: "Cats can't taste sweetness."
-        401:
-          description: "Invalid/Missing API Token"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Token:
-                  summary: "Missing API Token"
-                  value:
-                    code: 3
-                    message: "No API key provided"
-                Invalid-Token:
-                  summary: "Invalid API Token"
-                  value:
-                    code: 4
-                    message: "Invalid API key provided"
-        403:
-          description: "Missing Permissions"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Permissions:
-                  value:
-                    code: 1
-                    message: "You are not authorized to access this resource"
-                Blacklisted:
-                  value:
-                    code: 2
-                    message: "You are blacklisted from accessing this resource"
-      security:
-        - APIToken: []
-  /facts/chucknorris:
-    get:
-      operationId: "GetChuckNorrisFact"
-      description: |-
-        Gets a random Chuck Norris fact.
-        Returns the fact if successful, otherwise returns an error.
-
-        Permissions Required: `Facts::ChuckNorris`
-      summary: "Get Random Chuck Norris Fact"
-      responses:
-        200:
-          description: "The random Chuck Norris fact"
-          content:
-            plain/text:
-              schema:
-                type: string
-              examples:
-                fact:
-                  value: "Chuck Norris can divide by zero."
-        401:
-          description: "Invalid/Missing API Token"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Token:
-                  summary: "Missing API Token"
-                  value:
-                    code: 3
-                    message: "No API key provided"
-                Invalid-Token:
-                  summary: "Invalid API Token"
-                  value:
-                    code: 4
-                    message: "Invalid API key provided"
-        403:
-          description: "Missing Permissions"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Permissions:
-                  value:
-                    code: 1
-                    message: "You are not authorized to access this resource"
-                Blacklisted:
-                  value:
-                    code: 2
-                    message: "You are blacklisted from accessing this resource"
-      security:
-        - APIToken: []
   /location/coords:
     get:
       operationId: "GetLocationByCoords"
@@ -1437,172 +1278,6 @@ paths:
                   value:
                     code: 22
                     message: "Unable to retrieve requested information"
-      security:
-        - APIToken: []
-  /quotes/kanye:
-    get:
-      operationId: "GetKanyeQuote"
-      description: |-
-        Gets a random Kanye West quote.
-        Returns the quote if successful, otherwise returns an error.
-
-        Permissions Required: `Quote::Kanye`
-      summary: "Get Kanye Quote"
-      responses:
-        200:
-          description: "The Kanye West quote"
-          content:
-            plain/text:
-              schema:
-                type: string
-              examples:
-                quote:
-                  value: "I feel like I'm too busy writing history to read it."
-        401:
-          description: "Invalid/Missing API Token"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Token:
-                  summary: "Missing API Token"
-                  value:
-                    code: 3
-                    message: "No API key provided"
-                Invalid-Token:
-                  summary: "Invalid API Token"
-                  value:
-                    code: 4
-                    message: "Invalid API key provided"
-        403:
-          description: "Missing Permissions"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Permissions:
-                  value:
-                    code: 1
-                    message: "You are not authorized to access this resource"
-                Blacklisted:
-                  value:
-                    code: 2
-                    message: "You are blacklisted from accessing this resource"
-      security:
-        - APIToken: []
-  /quotes/ronswanson:
-    get:
-      operationId: "GetRonSwansonQuote"
-      description: |-
-        Gets a random Ron Swanson quote.
-        Returns the quote if successful, otherwise returns an error.
-
-        Permissions Required: `Quote::RonSwanson`
-      summary: "Get Ron Swanson Quote"
-      responses:
-        200:
-          description: "The Ron Swanson quote"
-          content:
-            plain/text:
-              schema:
-                type: string
-              examples:
-                quote:
-                  value: "There's only one thing I hate more than lying: skim milk. Which is water that's lying about being milk."
-        401:
-          description: "Invalid/Missing API Token"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Token:
-                  summary: "Missing API Token"
-                  value:
-                    code: 3
-                    message: "No API key provided"
-                Invalid-Token:
-                  summary: "Invalid API Token"
-                  value:
-                    code: 4
-                    message: "Invalid API key provided"
-        403:
-          description: "Missing Permissions"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Permissions:
-                  value:
-                    code: 1
-                    message: "You are not authorized to access this resource"
-                Blacklisted:
-                  value:
-                    code: 2
-                    message: "You are blacklisted from accessing this resource"
-      security:
-        - APIToken: []
-  /quotes/random:
-    get:
-      operationId: "GetRandomQuote"
-      description: |-
-        Gets a random quote.
-        Returns the quote if successful, otherwise returns an error.
-
-        Permissions Required: `Quote::Random`
-      summary: "Get Random Quote"
-      responses:
-        200:
-          description: "The random quote"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/QuoteData"
-              examples:
-                quote:
-                  value:
-                    quote: "The best way to predict the future is to create it."
-                    author: "Abraham Lincoln"
-                    tags:
-                      - "future"
-                      - "inspire"
-                      - "life"
-                      - "wisdom"
-        401:
-          description: "Invalid/Missing API Token"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Token:
-                  summary: "Missing API Token"
-                  value:
-                    code: 3
-                    message: "No API key provided"
-                Invalid-Token:
-                  summary: "Invalid API Token"
-                  value:
-                    code: 4
-                    message: "Invalid API key provided"
-        403:
-          description: "Missing Permissions"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorData"
-              examples:
-                Missing-Permissions:
-                  value:
-                    code: 1
-                    message: "You are not authorized to access this resource"
-                Blacklisted:
-                  value:
-                    code: 2
-                    message: "You are blacklisted from accessing this resource"
       security:
         - APIToken: []
   /whois/dns:
